# WRS-Pre-2024

./: CMakeLists.txt  LICENSE  Readme-ja.md  Readme.md
controller/: CMakeLists.txt  PlantFountainController.cpp  PlantLightController.cpp  PlantSmokeController.cpp  PlantValveController.cpp
model/: TargetTS1_35-50_2.body  TargetTS1_35-50_3.body  TargetTS1_35-50_4.body  TargetTS1_35-50_8.body  TargetTS4_35-100-B1.body  TargetTS4_35-100-C2.body  TargetTS4_35-100-D4.body  TargetTS4_35-100-E2.body  TargetTS4_35-100-E4.body  TargetTS4_35-100-E5.body  TargetTS4_35-100-G5.body  TargetTS4_35-100-I2.body  TargetTS4_35-100-LBC-B.body  TargetTS4_35-100-LBC-R.body  TargetTS4_35-100-RBC-B.body  TargetTS4_35-100-RBC-W.body  TargetTS4_35-100-RBJ-B.body  TargetTS4_35-100-RFC-R.body  TargetTS4_35-100-RFJ-R.body  TargetTS4_35-50-A3.body  TargetTS4_35-50-A4.body  TargetTS4_35-50-B2.body  TargetTS4_35-50-B3.body  TargetTS4_35-50-B4.body  TargetTS4_35-50-B5.body  TargetTS4_35-50-D1.body  TargetTS4_35-50-D3.body  TargetTS4_35-50-D4.body  TargetTS4_35-50-D5.body  TargetTS4_35-50-G2.body  TargetTS4_35-50-LBC-G.body  TargetTS4_35-50-LBC-W.body  TargetTS4_35-50-RBC-B.body  TargetTS4_35-50-RBC-R.body  TargetTS4_35-50-RBJ-R.body  TargetTS4_35-50-RBJ-W.body  TargetTS4_35-50-RFC-B.body  TargetTS4_35-50-RFC-R.body  TargetTS4_35-50-RFJ-W.body  target-lb.body  (+8 more)
project/: AGXSimulator.cnoid  AGXSimulatorCV.cnoid  AGXSimulatorHW.cnoid  AISTSimulator.cnoid  AISTSimulatorCV.cnoid  Drone.cnoid  (+64 more)
src/WRSUtilPlugin/: CMakeLists.txt  WRSUtilBar.cpp  WRSUtilBar.h  WRSUtilPlugin.cpp
src/WRSUtilPlugin/po/: ja.po
(+154 files in other folders)
